--- a/src/web-app/app/questions/question-types/boolean/boolean.component.html
+++ b/src/web-app/app/questions/question-types/boolean/boolean.component.html
@@ -1,7 +1,7 @@
 <div class="boolean-component">
   <h2 class="question">{{question.content}}</h2>
   <div class="buttons">
-    <button (click)="buttonClicked($event)" type="button" class="button" value="true">Yes</button>
-    <button (click)="buttonClicked($event)" type="button" class="button" value="false">No</button>
+    <button (click)="buttonClicked($event)" type="button" class="button" value="{{this.question.answer || 'true'}}">Yes</button>
+    <button (click)="buttonClicked($event)" type="button" class="button" value="{{this.question.answer || 'false'}}">No</button>
   </div>
 </div>
