--- a/src/web-app/app/stops/detail/detail.component.html
+++ b/src/web-app/app/stops/detail/detail.component.html
@@ -75,6 +75,6 @@
   </div>
   <div class="buttons">
     <a class="history-button" routerLink="/stops/{{stop.id}}/history">History</a>
-    <a class="update-button" (click)="goToQuestions()">Update</a>
+    <a class="update-button" routerLink="/stops/{{stop.id}}/questions">Update</a>
   </div>
 </div>
