Correct  route to histories

--- a/src/web-app/app/stops/detail/detail.component.html
+++ b/src/web-app/app/stops/detail/detail.component.html
@@ -74,7 +74,7 @@
     </section>
   </div>
   <div class="buttons">
-    <a class="history-button" routerLink="/stops/{{stop.id}}/history">History</a>
+    <a class="history-button" [routerLink]="['/stops', stop.id, 'histories']">History</a>
     <a class="update-button" routerLink="/stops/{{stop.id}}/questions">Update</a>
   </div>
 </div>
