--- a/src/web-app/app/histories/detail/history-detail.component.html
+++ b/src/web-app/app/histories/detail/history-detail.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="history">
+<div>
   {{history|json}}
   <header class="header">
-    <a class="backbutton" (click)="goToHistories()">
+    <a class="backbutton" routerLink="..">
       <svg class="back-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
         x="0px" y="0px" width="14.3px" height="24px" viewBox="0 0 14.3 24" style="enable-background:new 0 0 14.3 24;" xml:space="preserve">
         <defs>
