--- a/src/web-app/app/app.component.html
+++ b/src/web-app/app/app.component.html
@@ -2,6 +2,9 @@
 
 
 </mat-toolbar> -->
+<div id="content" *ngIf="loading">
+  <img src="../assets/icons/logo.svg" width="256px" alt="Octotrails PWA logo">
+</div>
 <div class="app-content">
   <router-outlet></router-outlet>
   <!-- <app-messages></app-messages> -->
