Prefix stops components with stop

--- a/src/web-app/app/stops/location/stop-location.component.html
+++ b/src/web-app/app/stops/location/stop-location.component.html
@@ -1,4 +1,4 @@
-<div  class="location" *ngIf="stop">
+<div class="location" *ngIf="stop">
   <header class="header">
     <a class="backbutton" routerLink="/stops/{{stop.id}}">
       <svg class="back-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
@@ -25,3 +25,4 @@
 </div>
 
 <div id="detailMap" class="map"></div>
+<!-- <app-map-box [mode]="location"></app-map-box> -->
