--- a/src/web-app/app/stops/search/stop-search.component.html
+++ b/src/web-app/app/stops/search/stop-search.component.html
@@ -1,5 +1,6 @@
 <section>
-  <app-map-box [mode]="proximity"></app-map-box>
+  <map-box></map-box>
+  <!-- <app-map-box [mode]="proximity"></app-map-box> -->
 </section>
 <section class="search-section">
   <form class="search-component">
