--- a/src/web-app/app/stops/detail/detail.component.html
+++ b/src/web-app/app/stops/detail/detail.component.html
@@ -14,7 +14,7 @@
           		c0.6,0.6,1.5,0.5,2.1-0.1c0.6-0.6,0.5-1.5-0.1-2.1L3.6,12l10.2-9.5C14.4,2,14.4,1.1,13.9,0.5z" fill=url(#grad1)/>
         </g>
       </svg>
-      back
+      Back
     </a>
     <div class="header-title">
       <h2 class="stop-title">{{stop.alpha["nl"]}}</h2>
