--- a/src/web-app/app/questions/overview/overview.component.html
+++ b/src/web-app/app/questions/overview/overview.component.html
@@ -1,17 +1,19 @@
 <div class="heading">
   <a class="backbutton" (click)="cancel()">
-    <svg version="1.1"
-    	 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
-    	 x="0px" y="0px" width="14.3px" height="24px" viewBox="0 0 14.3 24" style="enable-background:new 0 0 14.3 24;"
-    	 xml:space="preserve">
-    <defs>
-    </defs>
-    <g>
-    	<path d="M13.9,0.5C13.6,0.2,13.2,0,12.8,0c-0.4,0-0.7,0.1-1,0.4L0.5,10.9C0.2,11.2,0,11.6,0,12c0,0.4,0.2,0.8,0.5,1.1l11.3,10.5
-    		c0.6,0.6,1.5,0.5,2.1-0.1c0.6-0.6,0.5-1.5-0.1-2.1L3.6,12l10.2-9.5C14.4,2,14.4,1.1,13.9,0.5z"/>
-    </g>
-    </svg>
-    back
+        <svg class="back-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+        x="0px" y="0px" width="14.3px" height="24px" viewBox="0 0 14.3 24" style="enable-background:new 0 0 14.3 24;" xml:space="preserve">
+        <defs>
+          <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
+            <stop offset="0%" style="stop-color:#00C6FF;stop-opacity:1" />
+            <stop offset="100%" style="stop-color:#0072FF;stop-opacity:1" />
+          </linearGradient>
+        </defs>
+        <g>
+          <path d="M13.9,0.5C13.6,0.2,13.2,0,12.8,0c-0.4,0-0.7,0.1-1,0.4L0.5,10.9C0.2,11.2,0,11.6,0,12c0,0.4,0.2,0.8,0.5,1.1l11.3,10.5
+          		c0.6,0.6,1.5,0.5,2.1-0.1c0.6-0.6,0.5-1.5-0.1-2.1L3.6,12l10.2-9.5C14.4,2,14.4,1.1,13.9,0.5z" fill=url(#grad1)/>
+        </g>
+      </svg>
+      Back
   </a>
   <h1 class="section-title">Accessibility</h1>
   <h2 class="section-sub-title">Physical</h2>
