--- a/src/web-app/app/questions/question-types/number/number.component.css
+++ b/src/web-app/app/questions/question-types/number/number.component.css
@@ -4,11 +4,19 @@
   margin-right: auto;
   margin-bottom: 1.5rem;
 }
+
+.question-flex {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1.5rem;
+}
+
 .question {
-  font-size: 1.2rem;
-  line-height: 1.7rem;
-  color: rgba(29, 31, 49, 0.35);
-  width: 90%;
+    font-size: 1.4rem;
+    line-height: 1.7rem;
+    color: #1b1b1b;
+    width: 90%;
+    align-self: center;
 }
 
 ::ng-deep .mat-form-field-infix,
@@ -19,8 +27,16 @@
   margin-right: auto;
 }
 
+/* ::ng-deep .mat-form-field-appearance-legacy .mat-form-field-underline {
+    background-color: #EEEDED;
+    border: 2px solid #EEEDED;
+    border-radius: 2px;
+
+} */
+
 .unit {
-  align-self: flex-end;
-  padding: 0 1rem 0.5rem 0;
-  font-size: 1.2rem;
+  align-self: center;
+  font-size: 1.6rem;
+  color: rgba(29,31,49,0.45);
+  margin-left: 1rem;
 }
