--- a/src/web-app/app/stops/detail/detail.component.scss
+++ b/src/web-app/app/stops/detail/detail.component.scss
@@ -8,36 +8,40 @@
 }
 
 .stop-line {
-  display: flex;
-  align-items: center;
-  background-color: #eeeded;
-  color: black;
-  margin: 0 auto;
-  height: 4.8rem;
-  margin: .5rem;
+    display: flex;
+    align-items: center;
+    color: black;
+    height: 4.8rem;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.10), 0 3px 6px rgba(0,0,0,0.15);
+    border-radius: 5px;
+    border: 2px hidden;
+    background-color: white !important;
+    margin: 1rem 0 !important;
+    padding: 1rem;
 }
 
 .buttons {
   display: flex;
-  justify-content: space-around;
+  width: 90%;
+  justify-content: space-between;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.buttons a {
-  width: 50vw;
-  height: 4rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  color: black;
-}
-
-.history-button {
-  background-color: lightgrey;
-}
-
-.update-button {
-  background-color: gainsboro;
+.history-button, .update-button {
+    width: 47%;
+    padding: 0.5rem 1rem;
+    height: 4rem;
+    margin: 0 1rem 0.5rem 0;
+    background-image: linear-gradient(-45deg, rgba(243,243,243,0.99) 0%, #E8E8E8 100%);
+    box-shadow: 0 6px 28px -17px rgba(111,109,109,0.50);
+    border-radius: 5px;
+    border: 2px hidden;
+    font-size: 16px;
+    color: rgba(29,31,49,0.45);
+    text-align: center;
+    text-decoration: none;
+    line-height: 3rem;
 }
 
 .buttons a:hover{
@@ -70,11 +74,15 @@
   padding-bottom: 2rem;
 }
 
+.section {
+    margin-bottom: 2rem;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100vw;
+  width: 90%;
 }
 
 .header-title {
@@ -82,58 +90,4 @@
   flex-flow: column;
   justify-content: center;
   align-items: center;
-}
-
-.flex {
-  display: flex;
-}
-
-.stop-line {
-  display: flex;
-  background-color: gainsboro;
-  color: black;
-  margin: 1rem;
-}
-
-.buttons {
-  display: flex;
-  justify-content: space-around;
-}
-
-.buttons a {
-  width: 50vw;
-  height: 4rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  color: black;
-}
-
-.history-button {
-  background-color: lightgrey;
-}
-
-.update-button {
-  background-color: gainsboro;
-}
-
-.buttons a:hover{
-  background-color: yellow;
-}
-
-.line-number, .line-type {
-  font-size: 16px;
-  margin: 0.2rem;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background-position: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.line-type {
-  background-color: lightgrey;
 }
