--- a/src/web-app/app/stops/detail/detail.component.html
+++ b/src/web-app/app/stops/detail/detail.component.html
@@ -58,7 +58,7 @@
           <p class="line-number" [ngStyle]="{'color':line.textColor, 'background-color':line.backColor}">{{line.number}}</p>
         </div>
         <div>
-          <p>&rarr; {{line.direction['nl']}}</p>
+          <p class="line-direction">&rarr; {{line.direction['nl']}}</p>
           <p class="search-result-info-title">{{stop.alpha["nl"]}}</p>
         </div>
       </article>
