--- a/src/web-app/app/shared/components/navbar/navbar.component.html
+++ b/src/web-app/app/shared/components/navbar/navbar.component.html
@@ -15,34 +15,47 @@
     </svg>
     Back
   </a>
-  <div class="header-title">
-    <h2 class="stop-title" *ngIf="isOnHistoriesPage">History of {{stopName}}</h2>
-    <h2 class="stop-title" *ngElse>{{stopName}}</h2>
-    <h3 class="stop-id">ID : {{stopId}}</h3>
-  </div>
-  <div width="32.433" *ngIf="isOnHistoriesPage"></div>
-  <div class="photo" *ngIf="isOnStopsSearchPage">
-    <input type='file' name="file" id="file" class="input-file" accept="image/*" (change)="readURL($event);" />
-    <label for="file">
-      <figure>
-        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
-          x="0px" y="0px" width="32.433" height="24px" viewBox="0 0 90 66.6" style="color: ;;" xml:space="preserve">
-          <defs>
-            <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
-              <stop offset="0%" style="stop-color:#00C6FF;stop-opacity:1" />
-              <stop offset="100%" style="stop-color:#0072FF;stop-opacity:1" />
-            </linearGradient>
-          </defs>
-          <circle cx="45" cy="36.9" r="16.2" fill="url(#grad1)" />
-          <path d="M84.6,10.8H68.5c-1.2,0-2.3-0.6-3-1.6l-5.1-7.6c-0.7-1-1.8-1.6-3-1.6H32.5c-1.2,0-2.3,0.6-3,1.6l-5.1,7.6
-              c-0.7,1-1.8,1.6-3,1.6H5.4c-3,0-5.4,2.4-5.4,5.4v45c0,3,2.4,5.4,5.4,5.4h79.2c3,0,5.4-2.4,5.4-5.4v-45C90,13.2,87.6,10.8,84.6,10.8z
-               M45,58.5c-11.9,0-21.6-9.7-21.6-21.6c0-11.9,9.7-21.6,21.6-21.6S66.6,25,66.6,36.9C66.6,48.8,56.9,58.5,45,58.5z M72,18.9
-              c0,1-0.8,1.8-1.8,1.8h0c-1,0-1.8-0.8-1.8-1.8v0c0-1,0.8-1.8,1.8-1.8h0C71.2,17.1,72,17.9,72,18.9L72,18.9z" fill="url(#grad1)"
-          />
-          <rect x="10.8" y="3.6" width="7.2" height="3.6" fill="url(#grad1)" />
-        </svg>
-      </figure>
-    </label>
-  </div>
+
+  <ng-container *ngIf="!isOnHistoriesPage; else historiesTemplate">
+    <div class="header-title">
+      <h2 class="stop-title">{{stopName}}</h2>
+      <h3 class="stop-id">ID : {{stopId}}</h3>
+    </div>
+    <div width="32.433" *ngIf="!isOnStopsSearchPage"></div>
+    <div class="photo" *ngIf="isOnStopsSearchPage">
+      <input type='file' name="file" id="file" class="input-file" accept="image/*" (change)="readURL($event);" />
+      <label for="file">
+        <figure>
+          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+            x="0px" y="0px" width="32.433" height="24px" viewBox="0 0 90 66.6" style="color: ;;" xml:space="preserve">
+            <defs>
+              <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
+                <stop offset="0%" style="stop-color:#00C6FF;stop-opacity:1" />
+                <stop offset="100%" style="stop-color:#0072FF;stop-opacity:1" />
+              </linearGradient>
+            </defs>
+            <circle cx="45" cy="36.9" r="16.2" fill="url(#grad1)" />
+            <path d="M84.6,10.8H68.5c-1.2,0-2.3-0.6-3-1.6l-5.1-7.6c-0.7-1-1.8-1.6-3-1.6H32.5c-1.2,0-2.3,0.6-3,1.6l-5.1,7.6
+                c-0.7,1-1.8,1.6-3,1.6H5.4c-3,0-5.4,2.4-5.4,5.4v45c0,3,2.4,5.4,5.4,5.4h79.2c3,0,5.4-2.4,5.4-5.4v-45C90,13.2,87.6,10.8,84.6,10.8z
+                 M45,58.5c-11.9,0-21.6-9.7-21.6-21.6c0-11.9,9.7-21.6,21.6-21.6S66.6,25,66.6,36.9C66.6,48.8,56.9,58.5,45,58.5z M72,18.9
+                c0,1-0.8,1.8-1.8,1.8h0c-1,0-1.8-0.8-1.8-1.8v0c0-1,0.8-1.8,1.8-1.8h0C71.2,17.1,72,17.9,72,18.9L72,18.9z"
+              fill="url(#grad1)" />
+            <rect x="10.8" y="3.6" width="7.2" height="3.6" fill="url(#grad1)" />
+          </svg>
+        </figure>
+      </label>
+    </div>
+
+  </ng-container>
+
+  <ng-template #historiesTemplate>
+    <div class="header-title">
+      <h2 class="stop-title">History of {{stopName}}</h2>
+      <h3 class="stop-id">ID : {{stopId}}</h3>
+    </div>
+    <div width="32.433"></div>
+
+  </ng-template>
+
   <ng-content></ng-content>
 </header>
