--- a/src/web-app/app/my-octotrails-ng6-carousel/components/carousel/arrows/arrows.template.html
+++ b/src/web-app/app/my-octotrails-ng6-carousel/components/carousel/arrows/arrows.template.html
@@ -2,13 +2,13 @@
   <div (click)="onChangeSlide('prev')"
        [class.carousel-nav__btn--disabled]="disableElement">
     <div class="carousel-nav__clickable-area carousel-nav__clickable-area--left">
-      <i class="fa fa-angle-left carousel-nav__btn carousel-nav__btn--left" aria-hidden="true"></i>
+      <i class="fa fa-angle-left carousel-nav__btn carousel-nav__btn--left" aria-hidden="false"></i>
     </div>
   </div>
   <div (click)="onChangeSlide('next')"
        [class.carousel-nav__btn--disabled]="disableElement">
     <div class="carousel-nav__clickable-area carousel-nav__clickable-area--right">
-      <i class="fa fa-angle-right carousel-nav__btn carousel-nav__btn--right" aria-hidden="true"></i>
+      <i class="fa fa-angle-right carousel-nav__btn carousel-nav__btn--right" aria-hidden="false"></i>
     </div>
   </div>
 </div>
