--- a/src/web-app/app/stops/detail/detail.component.scss
+++ b/src/web-app/app/stops/detail/detail.component.scss
@@ -16,6 +16,10 @@
     margin: 1rem 0 !important;
 }
 
+.photo {
+    align-self: center;
+}
+
 .address-content {
     display: flex;
     justify-content: space-between;
@@ -24,17 +28,18 @@
 .address {
     width: 60%;
     padding-top: .5rem;
-    font-size: 1.4rem;
-    line-height: 2rem;
+    font-size: 1.6rem;
+    line-height: 2.2rem;
     align-self: flex-end;
+    color: darkgray;
 }
 
 .location {
     display: flex;
     flex-direction: column;
     text-decoration: none;
-    color: #1b1b1b;
-    font-size: 1.2rem;
+    color: #039be5;
+    font-size: 1.4rem;
 }
 
 .location img {
@@ -44,31 +49,41 @@
 
 
 .buttons {
-  display: flex;
-  width: 90%;
-  justify-content: space-between;
-  margin-left: auto;
-  margin-right: auto;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    background-color: white;
+    //box-shadow: 0 -3px 10px -4px rgba(27,27,27,0.30);
+    box-shadow: 0 -3px 15px -4px rgba(165,195,253,0.40);
 }
 
 .history-button, .update-button {
     width: 47%;
     padding: 0.5rem 1rem;
-    height: 4rem;
+    height: 5rem;
     margin: 0 1rem 0.5rem 0;
-    background-image: linear-gradient(-45deg, rgba(243,243,243,0.99) 0%, #E8E8E8 100%);
-    box-shadow: 0 6px 28px -17px rgba(111,109,109,0.50);
-    border-radius: 5px;
-    border: 2px hidden;
     font-size: 16px;
-    color: rgba(29,31,49,0.45);
+    color: #1B1B1B;
     text-align: center;
     text-decoration: none;
-    line-height: 3rem;
+    line-height: 4rem;
+}
+
+.button-icon {
+    vertical-align: middle;
+}
+
+.stripe {
+    height: 3.5rem;
+    align-self: center;
+    width: .1rem;
+    background-color: darkgray;
 }
 
 .line-direction {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     padding-left: 1rem;
     font-weight: 600;
     letter-spacing: .06rem;
@@ -76,7 +91,7 @@
 
 .search-result-info-title {
     padding-left: 1rem;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     padding-top: .4rem;
     color: darkgray;
 }
@@ -104,7 +119,6 @@
   width: 90%;
   margin: 0 auto;
   padding-top: 2rem;
-  padding-bottom: 2rem;
 }
 
 .section {
@@ -112,10 +126,19 @@
 }
 
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 90%;
+    width: 100%;
+    position: fixed;
+    background-color: white;
+    box-shadow: 0 3px 15px -4px rgba(165,195,253,0.40);
+    z-index: 100;
+}
+
+.header-content {
+    width: 90%;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-between;
 }
 
 .header-title {
@@ -123,4 +146,8 @@
   flex-flow: column;
   justify-content: center;
   align-items: center;
+}
+
+.empty-div {
+    height: 5rem;
 }
