--- a/src/web-app/styles.scss
+++ b/src/web-app/styles.scss
@@ -105,7 +105,7 @@ main {
 
 body {
   line-height: 1;
-  font-family: helvetica;
+  font-family: 'Roboto', sans-serif;
 }
 
 ol,
@@ -217,6 +217,11 @@ $my-app-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
 }
 
 .section-title {
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   font-weight: bold;
+}
+
+
+app-detail {
+    transform: none !important;
 }
