--- a/src/web-app/app/shared/components/question-types/boolean/question-type-boolean.component.html
+++ b/src/web-app/app/shared/components/question-types/boolean/question-type-boolean.component.html
@@ -1,9 +1,7 @@
 <div class="boolean-component">
   <h2 class="question">{{question.content}}</h2>
   <div class="buttons">
-    <button type="button" [ngClass]="btnClass" [class.active]="answer" (click)="buttonClicked($event)" type="button" [ngClass]="btnClass"
-      value="{{answer || 'true'}}" [disabled]="answer != undefined">Yes</button>
-    <button type="button" [ngClass]="btnClass" [class.active]="answer == false" (click)="buttonClicked($event)" value="{{answer || 'false'}}"
-      [disabled]="answer != undefined">No</button>
+    <button type="button" class="button" [class.active]="answer == 'true'" (click)="buttonClicked($event)" value="true" [disabled]="isReadOnly">Yes</button>
+    <button type="button" class="button" [class.active]="answer == 'false'" (click)="buttonClicked($event)" value="false" [disabled]="isReadOnly">No</button>
   </div>
 </div>
