Fix answer change

--- a/src/web-app/app/questions/overview/question-overview.component.html
+++ b/src/web-app/app/questions/overview/question-overview.component.html
@@ -7,11 +7,11 @@
   <p class="progress-tag">{{answeredQuestions}} of {{totalNumberOfQuestions}}</p>
 </div>
 
-<div *ngFor="let question of questions">
-  <app-question-type-number *ngIf="question.type == 'number'" [question]="question" (answer)="getAnswer($event)"></app-question-type-number>
-  <!-- <app-question-type-boolean *ngIf="question.type == 'boolean'" [question]="question" (answer)="getAnswer($event)"></app-question-type-boolean>
-  <app-question-type-multiple *ngIf="question.type == 'multiple'" [question]="question" (answer)="getAnswer($event)"></app-question-type-multiple>
-  <app-question-type-string *ngIf="question.type == 'string'" [question]="question" (answer)="getAnswer($event)"></app-question-type-string> -->
+<div *ngFor="let question of questions" [ngSwitch]="question.type | lowercase ">
+  <app-question-type-number *ngSwitchCase="'number'" [question]="question" (answer)="getAnswer($event)"></app-question-type-number>
+  <app-question-type-boolean *ngSwitchCase="'boolean'" [question]="question" (answer)="getAnswer($event)"></app-question-type-boolean>
+  <app-question-type-multiple *ngSwitchCase="'multiple'" [question]="question" (answer)="getAnswer($event)"></app-question-type-multiple>
+  <app-question-type-string *ngSwitchCase="'string'" [question]="question" (answer)="getAnswer($event)"></app-question-type-string>
 </div>
 
 <div class="end-buttons">
